# Ctrl-Home

./: Dockerfile.cheerp  Makefile  README-CHEERP.md  README.md  README_INTEGRADO.md  build_and_run.sh  cheerp_backend.js  microframework.cpp  server  server.cpp  test_cheerp_integration.html
backend/: CMakeLists.txt  main  server  server.cpp  topicos.txt
backend/include/common/: controllerInterface.h  request.h  response.h
backend/include/controllers/: UserController.h
backend/include/models/: UserModel.h
backend/noBorrar/: server.cpp
backend/src/: app.cpp  auth_module.cpp  cheerp_backend.cpp  main.cpp  main_integrated.cpp  prueba  testdb  web_server.cpp
backend/src/Postgres/: PostgresDB.cpp  PostgresDB.h
backend/src/broker/: Broker.cpp  Broker.h
backend/src/controllers/: UserController.cpp  usersControllers.h
backend/src/core/: Broker.cpp  Broker.h
backend/src/core/data/: SensorData.cpp  SensorData.h
backend/src/data/: SensorData.cpp  SensorData.h
backend/src/models/: UserModel.cpp
backend/src/models/postgres/: UserModel.cpp  UserModel.h
backend/src/models/postgrest/: UserModel.cpp  UserModel.h
backend/src/repositories/: DatosPrueba.sql  LDD.sql  Vistas.sql
backend/src/router/: Router.cpp  Router.h
backend/src/static/: index.html
backend/src/static/assets/: index-DXvveFUo.js
backend/static/: index.html
backend/static/assets/: index-BxlM88l3.css  index-b2jL5GJi.js
frontend/myapp/: neutralino.config.json
frontend/myapp/.tmp/: auth_info.json  window_state.config.json
frontend/myapp/react-src/: index.html  package-lock.json  package.json  react-src.rar  vite.config.js
frontend/myapp/react-src/public/: index.html  manifest.json
frontend/myapp/react-src/src/: App.css  App.jsx  index.js
frontend/myapp/react-src/src/cheerp/: cheerp_backend.js
frontend/myapp/react-src/src/components/: CardSetting.jsx  DeviceCard.jsx  Notification.jsx  NotificationTimelineItem.jsx  Sidebar.jsx  Topbar.jsx
frontend/myapp/react-src/src/pages/: Dashboard.jsx  Devices.jsx  Energy.jsx  Home.jsx  Login.css  Login.jsx  LoginRegister.jsx  Notifications.jsx  Register.jsx  Security.jsx  Settings.jsx
frontend/myapp/react-src/src/utils/: mqtt.js
scripts/: cheerp-build.sh  cheerp-test.sh  react-dev.sh  run.sh
